--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,14 +11,14 @@
   ul li {
     list-style-type: none;
   }
-  .web-size {
+  #app {
     width: 1000px;
     max-width: 80vw;
     min-height:100vh;
     margin:0 auto;
   }
   .page {
-    padding-top: 20px;
+    padding-top: 40px;
     color: #666;
   }
   .article-body {
