--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -38,9 +38,20 @@
     padding: 10px;
     border-radius: 4px;
     overflow-x: scroll;
+    font-size:14px;
   }
-  strong {
+  .inline-code {
+    background:#000;
+    color: #fff;
+    padding:0 10px;
+    margin: 0 10px;
+    border-radius:4px;
+  }
+  strong,b {
     color:#000;
     font-weight:bolder;
+  }
+  p b {
+    color: #d22;
   }
 }
